# SpaceDefenderCpp

./: .gitignore  CMakeLists.txt  redme.md
src/: assetList.hpp  main.cpp  main.hpp
src/gameElements/baseGameElement/: baseGameElement.hpp
src/gameElements/player/: player.cpp  player.hpp
src/managers/assetResolver/: assetResolver.cpp  assetResolver.hpp
src/managers/assetsManager/: assetsManager.cpp  assetsManager.hpp
